# embeddedc-hw

task4/: README.md
week01/: Revision&Task4.md  main.c
week02/: Writtentask.md  main.c
week03/: answers.txt  build_and_flash.bat  image.md
week04/: answers.txt
week04/Button_Debounce/: CMakeLists.txt  build_and_flash.bat  build_and_flash.sh  main.c  stm32f1xx_hal_conf.h
week04/MatrixKeypad_2x2/: CMakeLists.txt  main.c  system_stm32f1xx.c
week04/gpio_demo_hal/: CMakeLists.txt  build_and_flash.bat  build_and_flash.sh  main.c
